nem olha pq esse código tá bizarro